# project_auth

./: .env  Dockerfile  README.md  docker-compose.yml  manage.py  megano_db  pyproject.toml  task.py
auth_app/: admin.py  api.py  models.py  urls.py  views.py
auth_app/migrations/: 0001_initial.py
auth_app/templates/auth_app/: authorize_phone.html  base.html  login.html  profile.html  referral_list.html  verify_code.html
project_auth/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_all.py
tests/fixtures/: test_data.json
